♻Refactor templates, add error handling, and optimize context setup.
➕Added error handling for patient forms and updated several templates with new fields and views. Refactored context setup in `get_patient_by_id_view` to reduce redundancy. Improved illness history model logic for procedure day creation and made related fields optional where necessary.

--- a/backend/apps/sanatorium/templates/sanatorium/snippets/navbar.html
+++ b/backend/apps/sanatorium/templates/sanatorium/snippets/navbar.html
@@ -21,13 +21,13 @@
                 </li>
 
                 <li class="nav-item bg">
-                    <a href="{% url 'logus_booking:check-in' %}" class="nav-link">Пациенты</a>
+                    <a href="{% url 'sanatorium_staff:patients' %}" class="nav-link">Пациенты</a>
                 </li>
                 <li class="nav-item">
-                    <a href="{% url 'logus_booking:living' %}" class="nav-link">События</a>
+                    <a href="{% url 'sanatorium_staff:notifications' %}" class="nav-link">События</a>
                 </li>
                 <li class="nav-item">
-                    <a href="{% url 'logus_booking:check-out' %}" class="nav-link">Диспетчеризация</a>
+                    <a href="#" class="nav-link">Диспетчеризация</a>
                 </li>
             </ul>
 
