--- a/backend/apps/sanatorium/templates/sanatorium/doctors/main_screen.html
+++ b/backend/apps/sanatorium/templates/sanatorium/doctors/main_screen.html
@@ -97,6 +97,7 @@
                                         <th>Имя гостя</th>
                                         <th>Пол</th>
                                         <th>Возраст</th>
+                                        <th>Доктор</th>
                                         <th>Тип комнаты</th>
                                         <th>Комната</th>
                                         <th>Время заезда</th>
@@ -117,6 +118,9 @@
                                             </td>
                                             <td>
                                                 {{ i.patient.age }} год
+                                            </td>
+                                            <td>
+                                                {{ i.doctor }}
                                             </td>
                                             <td>
                                                 <span class="badge"
