--- a/backend/apps/sanatorium/templates/sanatorium/nurse/assigned_patients.html
+++ b/backend/apps/sanatorium/templates/sanatorium/nurse/assigned_patients.html
@@ -1,15 +1,13 @@
 {% load static %}
+{% load i18n %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hayat Medical Centre</title>
+    <title>Hayat Medical Center</title>
 
     <!-- Google Font: Source Sans Pro -->
-    <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
-    <!-- Font Awesome -->
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
     <link rel="stylesheet" href="{% static 'adminlte3_assets/plugins/fontawesome-free/css/all.min.css' %}">
@@ -27,123 +25,172 @@
     <link rel="stylesheet" href="{% static 'adminlte3_assets/plugins/bs-stepper/css/bs-stepper.min.css' %}">
     <link rel="stylesheet" href="{% static 'adminlte3_assets/plugins/dropzone/min/dropzone.min.css' %}">
     <link rel="stylesheet" href="{% static 'adminlte3_assets/dist/css/adminlte.min.css' %}">
-
-    <script src="https://unpkg.com/htmx.org@1.6.0"></script>
 </head>
-<body class="hold-transition sidebar-mini layout-navbar-fixed">
-<!-- Site wrapper -->
+<body class="hold-transition layout-top-nav">
 <div class="wrapper">
     <!-- Navbar -->
-    <nav class="main-header navbar navbar-expand navbar-white navbar-light">
-        <!-- Left navbar links -->
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
-            </li>
-            <li class="nav-item d-none d-sm-inline-block">
-                <a href="{% url 'sanatorium_doctors:assigned_patients' %}" class="nav-link">Пациенты</a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">
-                  Создать <span class="caret"></span>
-                </a>
-                <div class="dropdown-menu">
-                  <a class="dropdown-item" tabindex="-1" href="{% url 'sanatorium_doctors:cardiologist_appointment_page' ill_his.id %}">Консультация кардиолога первичная</a>
-                  <a class="dropdown-item" tabindex="-1" href="{% url 'sanatorium_doctors:neurologist_appointment_page' ill_his.id %}">Консультация невролога первичная</a>
-                  <a class="dropdown-item" tabindex="-1" href="{% url 'sanatorium_doctors:on_arrival_appointment_page' ill_his.id %}">Осмотр дежурного врача при поступлении</a>
-                  <a class="dropdown-item" tabindex="-1" href="{% url 'sanatorium_doctors:repeated_appointments_page' ill_his.id %}">Повторный приём лечащего врача</a>
-                  <a class="dropdown-item" tabindex="-1" href="{% url 'sanatorium_doctors:with_doc_on_duty_appointment_page' ill_his.id %}">Прием дежурного врача</a>
-                  <a class="dropdown-item" tabindex="-1" href="{% url 'sanatorium_doctors:ekg_appointment_page' ill_his.id %}">ЭКГ (Электрокардиограмма)</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" tabindex="-1" href="{% url 'sanatorium_doctors:final_appointment_page' ill_his.id %}">Заключительный прием лечащего врача</a>
-                </div>
-            </li>
-            <li class="nav-item d-none d-sm-inline-block">
-                <a href="#" class="nav-link">События</a>
-            </li>
-        </ul>
-
-        <!-- Right navbar links -->
-        <ul class="navbar-nav ml-auto">
-            <!-- Navbar Search -->
-            <li class="nav-item">
-                <a class="nav-link" data-widget="navbar-search" href="#" role="button">
-                    <i class="fas fa-search"></i>
-                </a>
-                <div class="navbar-search-block">
-                    <form class="form-inline">
-                        <div class="input-group input-group-sm">
-                            <input class="form-control form-control-navbar" type="search" placeholder="Search"
-                                   aria-label="Search">
-                            <div class="input-group-append">
-                                <button class="btn btn-navbar" type="submit">
-                                    <i class="fas fa-search"></i>
-                                </button>
-                                <button class="btn btn-navbar" type="button" data-widget="navbar-search">
-                                    <i class="fas fa-times"></i>
-                                </button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </li>
-            <!-- Notifications Dropdown Menu -->
-            <li class="nav-item dropdown">
-                <a class="nav-link" data-toggle="dropdown" href="#">
-                    <i class="far fa-bell"></i>
-                    <span class="badge badge-warning navbar-badge">15</span>
-                </a>
-{#                <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">#}
-{#                    <span class="dropdown-item dropdown-header">15 Notifications</span>#}
-{#                    <div class="dropdown-divider"></div>#}
-{#                    <a href="#" class="dropdown-item">#}
-{#                        <i class="fas fa-envelope mr-2"></i> 4 new messages#}
-{#                        <span class="float-right text-muted text-sm">3 mins</span>#}
-{#                    </a>#}
-{#                    <div class="dropdown-divider"></div>#}
-{#                    <a href="#" class="dropdown-item">#}
-{#                        <i class="fas fa-users mr-2"></i> 8 friend requests#}
-{#                        <span class="float-right text-muted text-sm">12 hours</span>#}
-{#                    </a>#}
-{#                    <div class="dropdown-divider"></div>#}
-{#                    <a href="#" class="dropdown-item">#}
-{#                        <i class="fas fa-file mr-2"></i> 3 new reports#}
-{#                        <span class="float-right text-muted text-sm">2 days</span>#}
-{#                    </a>#}
-{#                    <div class="dropdown-divider"></div>#}
-{#                    <a href="#" class="dropdown-item dropdown-footer">See All Notifications</a>#}
-{#                </div>#}
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" data-widget="fullscreen" href="#" role="button">
-                    <i class="fas fa-expand-arrows-alt"></i>
-                </a>
-            </li>
-        </ul>
-    </nav>
+    {% include 'sanatorium/nurse/snippets/navbar.html' %}
     <!-- /.navbar -->
 
-    <!-- Main Sidebar Container -->
-    {% include 'sanatorium/doctors/snippets/sidebar.html' %}
+    <!-- Content Wrapper. Contains page content -->
+    <div class="content-wrapper">
 
 
 
-    <!-- Main Content Container -->
-    {% block content %}
-        <!-- All the contents go here -->
-        <!-- /.content-ends -->
-    {% endblock content %}
-    <!-- Ends main Content Container -->
+        {% if messages %}
+            <div class="alert alert-danger">
+                {% for message in messages %}
+                    <p>{{ message }}</p>
+                {% endfor %}
+            </div>
+        {% endif %}
 
 
-    {% include 'sanatorium/doctors/snippets/footer.html' %}
+        <!-- Content Header (Page header) -->
+        <br>
+        <!-- Main content -->
+        <section class="content">
+            <div class="container-fluid">
+                <!-- SELECT2 EXAMPLE -->
+                <div class="card card-primary">
+                    <div class="card-header">
+                        <h3 class="card-title">Забронированные</h3>
+                    </div>
 
-    <!-- Control Sidebar -->
-    <aside class="control-sidebar control-sidebar-dark">
-        <!-- Control sidebar content goes here -->
-    </aside>
-    <!-- /.control-sidebar -->
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="card col-md-12">
+                                <div class="card-header">
+                                    <label for="arrival-date-picker">Время заезда</label>
+                                    <div class="card-tools">
+                                        <div class="input-group input-group-sm" style="width: 150px;">
+                                            <input type="date" id="arrival-date-picker" class="form-control" />
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+
+                            <!-- /.card-header -->
+                            <div class="card-body">
+                                <div class="card-tools">
+                                    <form method="get" action="">
+                                        <div class="input-group input-group-sm" style="width: 450px;">
+                                            <input type="text" name="table_search" class="form-control float-right"
+                                                   placeholder="Search" value="{{ query }}">
+
+                                            <div class="input-group-append">
+                                                <button type="submit" class="btn btn-default">
+                                                    <i class="fas fa-search"></i>
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
+
+                                <br>
+
+                                <table class="table table-bordered">
+                                    <thead>
+                                    <tr>
+                                        <th style="width: 10px">№</th>
+                                        <th>Имя гостя</th>
+                                        <th>Пол</th>
+                                        <th>Возраст</th>
+                                        <th>Комната</th>
+                                        <th>Тип комнаты</th>
+                                        <th>Время заезда</th>
+                                        <th>Дней</th>
+                                        <th>Дата выезда</th>
+                                        <th>Тариф</th>
+                                    </tr>
+
+                                    </thead>
+
+                                    <tbody id="booking-table-body">
+                                    {% for i in bookings %}
+                                        <tr>
+                                            <td>{{ i.series_number }}</td>
+                                            <td><a href="{% url 'sanatorium_nurse:title_page' i.pk %}">{{ i.patient.full_name }}</a></td>
+                                            <td>
+                                                {{ i.patient.formatted_gender }}
+                                            </td>
+                                            <td>
+                                                {{ i.patient.age }} год
+                                            </td>
+                                            <td>{{ i.booking.current_room.room_number }}</td>
+                                            <td>
+                                                <span class="badge"
+                                                      style="background-color: {{ i.booking.current_room_type.color }};">{{ i.booking.current_room_type }}</span>
+                                            </td>
+                                            <td>{{ i.booking.start_date }}</td>
+                                            <td>{{ i.booking.duration }}</td>
+                                            <td>{{ i.booking.end_date }}</td>
+                                            <td>
+                                                <span class="badge"
+                                                      style="background-color: {{ i.booking.current_tariff.color }};">{{ i.booking.current_tariff }}</span>
+                                            </td>
+                                        </tr>
+                                    {% endfor %}
+
+                                    </tbody>
+                                </table>
+                            </div>
+                            <!-- /.card-body -->
+                            <div class="card-footer clearfix">
+                                <ul class="pagination pagination-sm m-0 float-right">
+
+                                    {% if bookings.has_previous %}
+                                        <li class="page-item">
+                                            <a class="page-link"
+                                               href="?{% if query %}q={{ query }}&{% endif %}page={{ bookings.previous_page_number }}">&laquo;</a>
+                                        </li>
+                                    {% endif %}
+
+                                    {% for i in bookings.paginator.page_range %}
+                                        {% if bookings.number == i %}
+                                            <li class="page-item active"><a class="page-link">{{ i }}</a></li>
+                                        {% else %}
+                                            <li class="page-item"><a class="page-link"
+                                                                     href="?{% if query %}q={{ query }}&{% endif %}page={{ i }}">{{ i }}</a>
+                                            </li>
+                                        {% endif %}
+                                    {% endfor %}
+
+                                    {% if bookings.has_next %}
+                                        <li class="page-item">
+                                            <a class="page-link"
+                                               href="?{% if query %}q={{ query }}&{% endif %}page={{ bookings.next_page_number }}">Next</a>
+                                        </li>
+                                        <li class="page-item">
+                                            <a class="page-link"
+                                               href="?{% if query %}q={{ query }}&{% endif %}page={{ bookings.paginator.num_pages }}">Last
+                                                &raquo;</a>
+                                        </li>
+                                    {% endif %}
+
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+    </div>
+    <!-- /.container-fluid -->
+    <!-- /.content -->
 </div>
+<!-- /.content-wrapper -->
+
+
+{% include 'sanatorium/snippets/footer.html' %}
+<!-- Control Sidebar -->
+<aside class="control-sidebar control-sidebar-dark">
+    <!-- Control sidebar content goes here -->
+</aside>
+<!-- /.control-sidebar -->
+
 <!-- ./wrapper -->
 
 <!-- jQuery -->
@@ -160,7 +207,7 @@
 <script src="{% static 'adminlte3_assets/plugins/bs-stepper/js/bs-stepper.min.js' %}"></script>
 <script src="{% static 'adminlte3_assets/plugins/dropzone/min/dropzone.min.js' %}"></script>
 <script src="{% static 'adminlte3_assets/dist/js/adminlte.min.js' %}"></script>
-<!-- AdminLTE for demo purposes -->
+<!-- Page specific script -->
 
 <script>
     document.getElementById('arrival-date-picker').addEventListener('change', function () {
@@ -209,24 +256,7 @@
 
         //Date picker
         $('#reservationdate').datetimepicker({
-            format: 'DD/MM/YYYY'
-        });
-        $('#lab_reservationdate').datetimepicker({
-            format: 'DD/MM/YYYY'
-        });
-        $('#proc_reservationdate').datetimepicker({
-            format: 'DD/MM/YYYY'
-        });
-        $('#pills_reservationdate').datetimepicker({
-            format: 'DD/MM/YYYY'
-        });
-
-        $('#booking_start_date').datetimepicker({
-            format: 'DD/MM/YYYY'
-        });
-
-        $('#booking_end_date').datetimepicker({
-            format: 'DD/MM/YYYY'
+            format: 'L'
         });
 
         //Date and time picker
@@ -343,65 +373,11 @@
     }
     // DropzoneJS Demo Code End
 </script>
-
-<script type="text/javascript">
-    $(document).ready(function () {
-    $('#speciality').on('change', function () {
-        const specialityId = $(this).val();
-        const medicalServiceSelect = $('#medical-service');
-
-        if (specialityId) {
-            // Use Django's URL template with a placeholder
-            const url = "{% url 'sanatorium_doctors:get_labs' 0 %}".replace('0', specialityId);
-
-            $.ajax({
-                url: url,
-                type: 'GET',
-                dataType: 'json',
-                success: function (data) {
-                    // Clear existing options
-                    medicalServiceSelect.html('<option value="">Select a medical service</option>');
-
-                    // Populate with new options
-                    $.each(data, function (index, service) {
-                        medicalServiceSelect.append(new Option(service.name, service.id));
-                    });
-
-                    // Enable the select element
-                    medicalServiceSelect.prop('disabled', false);
-                },
-                error: function (xhr, status, error) {
-                    console.error('Error fetching medical services:', error);
-                }
-            });
-        } else {
-            // Reset and disable if no speciality is selected
-            medicalServiceSelect.html('<option value="">Select a medical service</option>');
-            medicalServiceSelect.prop('disabled', true);
-        }
-    });
-});
-
-
-
-</script>
-<script>
-    document.addEventListener("DOMContentLoaded", function () {
-        const removeFileButton = document.getElementById("removeFileButton");
-        const filePreview = document.getElementById("attachedFilePreview");
-        const fileUploadContainer = document.getElementById("fileUploadContainer");
-
-        if (removeFileButton) {
-            removeFileButton.addEventListener("click", function () {
-                // Hide preview and show file input
-                filePreview.style.display = "none";
-                fileUploadContainer.style.display = "block";
-
-                // Optionally clear the existing file on the backend using AJAX
-            });
-        }
-    });
-</script>
+</body>
+</html>
+</title>
+</head>
+<body>
 
 </body>
 </html>
