--- a/backend/apps/sanatorium/templates/sanatorium/nurse/consultings_update.html
+++ b/backend/apps/sanatorium/templates/sanatorium/nurse/consultings_update.html
@@ -1,4 +1,4 @@
-{% extends 'sanatorium/doctors/base.html' %}
+{% extends 'sanatorium/nurse/base.html' %}
 {% load static %}
 {% load humanize %}
 
@@ -86,10 +86,6 @@
 
                                                 <div class="modal-footer justify-content-between">
 
-                                                    <button name="form" type="submit"
-                                                            class="btn btn-primary">
-                                                        Сохранить
-                                                    </button>
                                                 </div>
                                             </div>
                                         </form>
@@ -149,7 +145,7 @@
                                                                 {% with current_url=request.get_full_path %}
                                                                     <td class="project-actions text-right">
                                                                         <a class="btn btn-info btn-sm"
-                                                                           href="{% url 'sanatorium_doctors:consulting_result_update' lab.id %}?next={{ current_url }}">
+                                                                           href="{% url 'sanatorium_nurse:consulting_result_update' lab.id %}?next={{ current_url }}">
                                                                             <i class="fas fa-edit">
                                                                             </i>
                                                                             Изменить
@@ -178,7 +174,7 @@
                                                                                     </div>
 
                                                                                     <div class="modal-footer justify-content-between">
-                                                                                        <a class="btn btn-danger btn-sm" href="{% url 'sanatorium_doctors:consulting_result_delete' lab.id %}?next={{ current_url }}">
+                                                                                        <a class="btn btn-danger btn-sm" href="{% url 'sanatorium_nurse:consulting_result_delete' lab.id %}?next={{ current_url }}">
                                                                                             <i class="fas fa-trash">
                                                                                             </i>
                                                                                             Удалить
