--- a/backend/apps/sanatorium/templates/sanatorium/nurse/patient.html
+++ b/backend/apps/sanatorium/templates/sanatorium/nurse/patient.html
@@ -1,15 +1,13 @@
 {% load static %}
+{% load i18n %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hayat Medical Centre</title>
+    <title>Hayat Medical Center</title>
 
     <!-- Google Font: Source Sans Pro -->
-    <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
-    <!-- Font Awesome -->
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
     <link rel="stylesheet" href="{% static 'adminlte3_assets/plugins/fontawesome-free/css/all.min.css' %}">
@@ -27,122 +25,106 @@
     <link rel="stylesheet" href="{% static 'adminlte3_assets/plugins/bs-stepper/css/bs-stepper.min.css' %}">
     <link rel="stylesheet" href="{% static 'adminlte3_assets/plugins/dropzone/min/dropzone.min.css' %}">
     <link rel="stylesheet" href="{% static 'adminlte3_assets/dist/css/adminlte.min.css' %}">
-
-    <script src="https://unpkg.com/htmx.org@1.6.0"></script>
 </head>
-<body class="hold-transition sidebar-mini layout-navbar-fixed">
-<!-- Site wrapper -->
+<body class="hold-transition layout-top-nav">
 <div class="wrapper">
     <!-- Navbar -->
-    <nav class="main-header navbar navbar-expand navbar-white navbar-light">
-        <!-- Left navbar links -->
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
-            </li>
-            <li class="nav-item d-none d-sm-inline-block">
-                <a href="{% url 'sanatorium_doctors:assigned_patients' %}" class="nav-link">Пациенты</a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">
-                  Создать <span class="caret"></span>
-                </a>
-                <div class="dropdown-menu">
-                  <a class="dropdown-item" tabindex="-1" href="{% url 'sanatorium_doctors:cardiologist_appointment_page' ill_his.id %}">Консультация кардиолога первичная</a>
-                  <a class="dropdown-item" tabindex="-1" href="{% url 'sanatorium_doctors:neurologist_appointment_page' ill_his.id %}">Консультация невролога первичная</a>
-                  <a class="dropdown-item" tabindex="-1" href="{% url 'sanatorium_doctors:on_arrival_appointment_page' ill_his.id %}">Осмотр дежурного врача при поступлении</a>
-                  <a class="dropdown-item" tabindex="-1" href="{% url 'sanatorium_doctors:repeated_appointments_page' ill_his.id %}">Повторный приём лечащего врача</a>
-                  <a class="dropdown-item" tabindex="-1" href="{% url 'sanatorium_doctors:with_doc_on_duty_appointment_page' ill_his.id %}">Прием дежурного врача</a>
-                  <a class="dropdown-item" tabindex="-1" href="{% url 'sanatorium_doctors:ekg_appointment_page' ill_his.id %}">ЭКГ (Электрокардиограмма)</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" tabindex="-1" href="{% url 'sanatorium_doctors:final_appointment_page' ill_his.id %}">Заключительный прием лечащего врача</a>
-                </div>
-            </li>
-            <li class="nav-item d-none d-sm-inline-block">
-                <a href="#" class="nav-link">События</a>
-            </li>
-        </ul>
-
-        <!-- Right navbar links -->
-        <ul class="navbar-nav ml-auto">
-            <!-- Navbar Search -->
-            <li class="nav-item">
-                <a class="nav-link" data-widget="navbar-search" href="#" role="button">
-                    <i class="fas fa-search"></i>
-                </a>
-                <div class="navbar-search-block">
-                    <form class="form-inline">
-                        <div class="input-group input-group-sm">
-                            <input class="form-control form-control-navbar" type="search" placeholder="Search"
-                                   aria-label="Search">
-                            <div class="input-group-append">
-                                <button class="btn btn-navbar" type="submit">
-                                    <i class="fas fa-search"></i>
-                                </button>
-                                <button class="btn btn-navbar" type="button" data-widget="navbar-search">
-                                    <i class="fas fa-times"></i>
-                                </button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </li>
-            <!-- Notifications Dropdown Menu -->
-            <li class="nav-item dropdown">
-                <a class="nav-link" data-toggle="dropdown" href="#">
-                    <i class="far fa-bell"></i>
-                    <span class="badge badge-warning navbar-badge">15</span>
-                </a>
-{#                <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">#}
-{#                    <span class="dropdown-item dropdown-header">15 Notifications</span>#}
-{#                    <div class="dropdown-divider"></div>#}
-{#                    <a href="#" class="dropdown-item">#}
-{#                        <i class="fas fa-envelope mr-2"></i> 4 new messages#}
-{#                        <span class="float-right text-muted text-sm">3 mins</span>#}
-{#                    </a>#}
-{#                    <div class="dropdown-divider"></div>#}
-{#                    <a href="#" class="dropdown-item">#}
-{#                        <i class="fas fa-users mr-2"></i> 8 friend requests#}
-{#                        <span class="float-right text-muted text-sm">12 hours</span>#}
-{#                    </a>#}
-{#                    <div class="dropdown-divider"></div>#}
-{#                    <a href="#" class="dropdown-item">#}
-{#                        <i class="fas fa-file mr-2"></i> 3 new reports#}
-{#                        <span class="float-right text-muted text-sm">2 days</span>#}
-{#                    </a>#}
-{#                    <div class="dropdown-divider"></div>#}
-{#                    <a href="#" class="dropdown-item dropdown-footer">See All Notifications</a>#}
-{#                </div>#}
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" data-widget="fullscreen" href="#" role="button">
-                    <i class="fas fa-expand-arrows-alt"></i>
-                </a>
-            </li>
-        </ul>
-    </nav>
+    {% include 'sanatorium/nurse/snippets/navbar-dropdown.html' %}
     <!-- /.navbar -->
 
-    <!-- Main Sidebar Container -->
-    {% include 'sanatorium/doctors/snippets/sidebar.html' %}
+    <!-- Content Wrapper. Contains page content -->
+    <div class="content-wrapper">
+        <!-- Content Header (Page header) -->
+        <br>
+        <!-- Main content -->
+        <section class="content">
+            <div class="container-fluid">
+                <!-- SELECT2 EXAMPLE -->
+                <div class="card card-primary">
+                    <div class="card-header">
+                        <h3 class="card-title">{{ ih_form.instance.series_number }}
+                            | {{ patient_form.instance.full_name }}</h3>
+                    </div>
+
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-5 col-sm-3">
+                                <div class="nav flex-column nav-tabs h-100" id="vert-tabs-tab" role="tablist"
+                                     aria-orientation="vertical">
+                                    <a class="nav-link active" id="vert-tabs-title-page-tab" data-toggle="pill"
+                                       href="#vert-tabs-title-page" role="tab" aria-controls="vert-tabs-title-page"
+                                       aria-selected="true">Титульная страница</a>
+                                    <a class="nav-link" id="vert-tabs-messages-tab" data-toggle="pill"
+                                       href="#vert-tabs-messages" role="tab" aria-controls="vert-tabs-messages"
+                                       aria-selected="false">Документы</a>
+                                    <a class="nav-link" id="vert-tabs-init-app-tab" data-toggle="pill"
+                                       href="#vert-tabs-init-app" role="tab" aria-controls="vert-tabs-init-app"
+                                       aria-selected="false">Первичный прием лечащего врача</a>
+                                    <a class="nav-link" id="vert-tabs-diet-tab" data-toggle="pill"
+                                       href="#vert-tabs-diet" role="tab" aria-controls="vert-tabs-diet"
+                                       aria-selected="false">Питание</a>
+
+                                    <a class="nav-link" id="vert-tabs-procedures-list-tab" data-toggle="pill"
+                                       href="#vert-tabs-procedures-list" role="tab"
+                                       aria-controls="vert-tabs-procedures-list"
+                                       aria-selected="false">Основной лист назначений</a>
+                                    <a class="nav-link" id="vert-tabs-settings-tab" data-toggle="pill"
+                                       href="#vert-tabs-settings" role="tab" aria-controls="vert-tabs-settings"
+                                       aria-selected="false">Питание</a>
+
+                                </div>
+                            </div>
+                            <div class="col-7 col-sm-9">
+                                <div class="tab-content" id="vert-tabs-tabContent">
+
+                                    {% include 'sanatorium/nurse/components/title-page.html' %}
+
+                                    {% include 'sanatorium/nurse/components/init_appointment_snippet.html' %}
+
+                                    {#                                    {% include 'sanatorium/nurse/components/diet_snippet.html' %}#}
+
+                                    <div class="tab-pane fade" id="vert-tabs-messages" role="tabpanel"
+                                         aria-labelledby="vert-tabs-messages-tab">
+                                        3
+                                    </div>
+                                    <div class="tab-pane fade" id="vert-tabs-docs" role="tabpanel"
+                                         aria-labelledby="vert-tabs-food-tab">
+                                        4
+                                    </div>
+                                    <div class="tab-pane fade" id="vert-tabs-docs" role="tabpanel"
+                                         aria-labelledby="vert-tabs-food-tab">
+                                        5
+                                    </div>
+                                    <div class="tab-pane fade" id="vert-tabs-docs" role="tabpanel"
+                                         aria-labelledby="vert-tabs-food-tab">
+                                        6
+                                    </div>
+                                    <div class="tab-pane fade" id="vert-tabs-docs" role="tabpanel"
+                                         aria-labelledby="vert-tabs-food-tab">
+                                        7
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+    </div>
+    <!-- /.container-fluid -->
+    <!-- /.content -->
+</div>
+<!-- /.content-wrapper -->
 
 
+{% include 'sanatorium/snippets/footer.html' %}
+<!-- Control Sidebar -->
+<aside class="control-sidebar control-sidebar-dark">
+    <!-- Control sidebar content goes here -->
+</aside>
+<!-- /.control-sidebar -->
 
-    <!-- Main Content Container -->
-    {% block content %}
-        <!-- All the contents go here -->
-        <!-- /.content-ends -->
-    {% endblock content %}
-    <!-- Ends main Content Container -->
-
-
-    {% include 'sanatorium/doctors/snippets/footer.html' %}
-
-    <!-- Control Sidebar -->
-    <aside class="control-sidebar control-sidebar-dark">
-        <!-- Control sidebar content goes here -->
-    </aside>
-    <!-- /.control-sidebar -->
 </div>
 <!-- ./wrapper -->
 
@@ -160,7 +142,7 @@
 <script src="{% static 'adminlte3_assets/plugins/bs-stepper/js/bs-stepper.min.js' %}"></script>
 <script src="{% static 'adminlte3_assets/plugins/dropzone/min/dropzone.min.js' %}"></script>
 <script src="{% static 'adminlte3_assets/dist/js/adminlte.min.js' %}"></script>
-<!-- AdminLTE for demo purposes -->
+<!-- Page specific script -->
 
 <script>
     document.getElementById('arrival-date-picker').addEventListener('change', function () {
@@ -209,15 +191,6 @@
 
         //Date picker
         $('#reservationdate').datetimepicker({
-            format: 'DD/MM/YYYY'
-        });
-        $('#lab_reservationdate').datetimepicker({
-            format: 'DD/MM/YYYY'
-        });
-        $('#proc_reservationdate').datetimepicker({
-            format: 'DD/MM/YYYY'
-        });
-        $('#pills_reservationdate').datetimepicker({
             format: 'DD/MM/YYYY'
         });
 
@@ -344,64 +317,11 @@
     // DropzoneJS Demo Code End
 </script>
 
-<script type="text/javascript">
-    $(document).ready(function () {
-    $('#speciality').on('change', function () {
-        const specialityId = $(this).val();
-        const medicalServiceSelect = $('#medical-service');
-
-        if (specialityId) {
-            // Use Django's URL template with a placeholder
-            const url = "{% url 'sanatorium_doctors:get_labs' 0 %}".replace('0', specialityId);
-
-            $.ajax({
-                url: url,
-                type: 'GET',
-                dataType: 'json',
-                success: function (data) {
-                    // Clear existing options
-                    medicalServiceSelect.html('<option value="">Select a medical service</option>');
-
-                    // Populate with new options
-                    $.each(data, function (index, service) {
-                        medicalServiceSelect.append(new Option(service.name, service.id));
-                    });
-
-                    // Enable the select element
-                    medicalServiceSelect.prop('disabled', false);
-                },
-                error: function (xhr, status, error) {
-                    console.error('Error fetching medical services:', error);
-                }
-            });
-        } else {
-            // Reset and disable if no speciality is selected
-            medicalServiceSelect.html('<option value="">Select a medical service</option>');
-            medicalServiceSelect.prop('disabled', true);
-        }
-    });
-});
-
-
-
-</script>
-<script>
-    document.addEventListener("DOMContentLoaded", function () {
-        const removeFileButton = document.getElementById("removeFileButton");
-        const filePreview = document.getElementById("attachedFilePreview");
-        const fileUploadContainer = document.getElementById("fileUploadContainer");
-
-        if (removeFileButton) {
-            removeFileButton.addEventListener("click", function () {
-                // Hide preview and show file input
-                filePreview.style.display = "none";
-                fileUploadContainer.style.display = "block";
-
-                // Optionally clear the existing file on the backend using AJAX
-            });
-        }
-    });
-</script>
+</body>
+</html>
+</title>
+</head>
+<body>
 
 </body>
 </html>
