--- a/backend/apps/sanatorium/templates/sanatorium/nurse/snippets/navbar-dropdown.html
+++ b/backend/apps/sanatorium/templates/sanatorium/nurse/snippets/navbar-dropdown.html
@@ -18,16 +18,26 @@
             <ul class="navbar-nav">
 
                 <li class="nav-item bg">
-                    <a href="{% url 'sanatorium_doctors:assigned_patients' %}" class="nav-link">Пациенты</a>
-                </li>
-                <li class="nav-item bg">
-                    <a href="{% url 'sanatorium_doctors:main_screen' %}" class="nav-link">Все пациенты</a>
+                    <a href="{% url 'sanatorium_nurse:main_screen' %}" class="nav-link">Пациенты</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">События</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">Диспетчеризация</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a id="dropdownSubMenu1" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+                       class="nav-link dropdown-toggle">Начало приёма</a>
+                    <ul aria-labelledby="dropdownSubMenu1" class="dropdown-menu border-0 shadow">
+                        <li><a href="#" class="dropdown-item">Заключительный прием лечащего врача </a></li>
+                        <li><a href="#" class="dropdown-item">Консультация кардиолога первичная</a></li>
+                        <li><a href="#" class="dropdown-item">Консультация невролога первичная</a></li>
+                        <li><a href="#" class="dropdown-item">Осмотр дежурного врача при поступлении</a></li>
+                        <li><a href="#" class="dropdown-item">Повторный приём лечащего врача</a></li>
+                        <li><a href="#" class="dropdown-item">Прием дежурного врача</a></li>
+                        <li><a href="#" class="dropdown-item">ЭКГ (Электрокардиограмма)</a></li>
+                    </ul>
                 </li>
             </ul>
 
