--- a/backend/apps/sanatorium/templates/sanatorium/nurse/snippets/navbar.html
+++ b/backend/apps/sanatorium/templates/sanatorium/nurse/snippets/navbar.html
@@ -18,10 +18,7 @@
             <ul class="navbar-nav">
 
                 <li class="nav-item bg">
-                    <a href="{% url 'sanatorium_doctors:assigned_patients' %}" class="nav-link">Пациенты</a>
-                </li>
-                <li class="nav-item bg">
-                    <a href="{% url 'sanatorium_doctors:main_screen' %}" class="nav-link">Все пациенты</a>
+                    <a href="{% url 'sanatorium_nurse:assigned_patients' %}" class="nav-link">Пациенты</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">События</a>
